; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_csum.c_ext2fs_inode_bitmap_csum_verify.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_csum.c_ext2fs_inode_bitmap_csum_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }
%struct.ext4_group_desc = type { i32, i64 }

@EXT4_BG_INODE_BITMAP_CSUM_HI_END = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_inode_bitmap_csum_verify(%struct.TYPE_4__* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.ext4_group_desc*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %7, align 4
  %18 = call i64 @ext2fs_group_desc(%struct.TYPE_4__* %13, i32 %16, i32 %17)
  %19 = inttoptr i64 %18 to %struct.ext4_group_desc*
  store %struct.ext4_group_desc* %19, %struct.ext4_group_desc** %10, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @ext2fs_has_feature_metadata_csum(i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %58

26:                                               ; preds = %4
  %27 = load %struct.ext4_group_desc*, %struct.ext4_group_desc** %10, align 8
  %28 = getelementptr inbounds %struct.ext4_group_desc, %struct.ext4_group_desc* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* %11, align 4
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load i8*, i8** %8, align 8
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @ext2fs_crc32c_le(i32 %32, i8* %33, i32 %34)
  store i32 %35, i32* %12, align 4
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i64 @EXT2_DESC_SIZE(i32 %38)
  %40 = load i64, i64* @EXT4_BG_INODE_BITMAP_CSUM_HI_END, align 8
  %41 = icmp sge i64 %39, %40
  br i1 %41, label %42, label %50

42:                                               ; preds = %26
  %43 = load %struct.ext4_group_desc*, %struct.ext4_group_desc** %10, align 8
  %44 = getelementptr inbounds %struct.ext4_group_desc, %struct.ext4_group_desc* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = trunc i64 %45 to i32
  %47 = shl i32 %46, 16
  %48 = load i32, i32* %11, align 4
  %49 = or i32 %48, %47
  store i32 %49, i32* %11, align 4
  br label %53

50:                                               ; preds = %26
  %51 = load i32, i32* %12, align 4
  %52 = and i32 %51, 65535
  store i32 %52, i32* %12, align 4
  br label %53

53:                                               ; preds = %50, %42
  %54 = load i32, i32* %11, align 4
  %55 = load i32, i32* %12, align 4
  %56 = icmp eq i32 %54, %55
  %57 = zext i1 %56 to i32
  store i32 %57, i32* %5, align 4
  br label %58

58:                                               ; preds = %53, %25
  %59 = load i32, i32* %5, align 4
  ret i32 %59
}

declare dso_local i64 @ext2fs_group_desc(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @ext2fs_has_feature_metadata_csum(i32) #1

declare dso_local i32 @ext2fs_crc32c_le(i32, i8*, i32) #1

declare dso_local i64 @EXT2_DESC_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
